# TransitRouter.jl

./: .gitignore  Project.toml  README.md  build_network.jl  route_test.jl
.github/workflows/: docs.yml  test.yml
cxx/: CMakeLists.txt  osrmjl.cpp
cxx/cmake/: FindLibOSRM.cmake
docs/: make.jl
docs/src/: index.md  raptor.md
src/: TransitRouter.jl  constants.jl  util.jl
src/model/: Route.jl  Service.jl  Shape.jl  Stop.jl  StopTime.jl  Transfer.jl  TransitNetwork.jl  Trip.jl  TripPattern.jl  model.jl
src/osrm/: osrm.jl
src/routing/: rangeraptor.jl  raptor.jl  routing.jl  streetraptor.jl  trace.jl
test/: Artifacts.toml  Project.toml  mock_gtfs.jl  runtests.jl  test-includes.jl  test-network-build.jl  test-raptor.jl  test-shapes.jl  test-streetraptor.jl  time-tests.jl
test/raptor/: test-faster-transfer.jl  test-local-express.jl  test-loop.jl  test-min-walk-distance.jl  test-overnight.jl  test-pickup-dropoff-type.jl  test-range-raptor.jl  test-service-running.jl  test-transfer-and-direct.jl  test-transfers.jl
test/raptor/range-raptor/: test-empirical.jl
test/snapshots/: state_hitchcock_transfer  streetrouter_access_dist_for_destination  streetrouter_access_geom_for_destination  streetrouter_egress_dist_for_destination  streetrouter_egress_geom_for_destination  streetrouter_egress_stop_for_destination  streetrouter_times_at_destinations
test/trace/: test-streetraptor-trace.jl
v0.2.0/: index.html
v0.2.0/raptor/: index.html
v0.2.0/search/: index.html
v0.2.1/: index.html  search_index.js
v0.2.1/raptor/: index.html
v0.2.1/search/: index.html
